# csad2425ki410ivaniukoo07

./: .gitignore  README.md
.github/workflows/: client_build.yml  qt_client.yml  qt_client_build.yml
config/: Doxyfile
reports/doc/: АПКС Іванюк О.О. Lab1 Варіант 7 KI-410.docx  АПКС Іванюк О.О. Lab2 Варіант 7 KI-410.docx  АПКС Іванюк О.О. Lab3 Варіант 7 KI-410.docx  АПКС Іванюк О.О. Lab4 Варіант 7 KI-410.docx  АПКС Іванюк О.О. Lab5 Варіант 7 KI-410.docx
src/arduino/UART_Server_Lab_2/: UART_Server_Lab_2.ino
src/arduino/server_lab3/: server_lab3.ino
src/arduino/sketch_csad/: sketch_csad.ino
src/win/Client_Lab_3/: lab3.pro  lab3.pro.user.d3c4db8  lab3.pro.user.e3dd620  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/win/UART_Client_Lab_2/: UART_Client_Lab_2.cpp  UART_Client_Lab_2.sln  UART_Client_Lab_2.vcxproj  UART_Client_Lab_2.vcxproj.filters  xml_utils.cpp  xml_utils.h
src/win/UART_Client_Lab_2_tests/: UART_Client_Lab_2_tests.cpp  UART_Client_Lab_2_tests.vcxproj  UART_Client_Lab_2_tests.vcxproj.filters
src/win/client_lab3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_tests.cpp  resources.qrc
src/win/lab3_cmake/: CMakeLists.txt
